# learning-pyglet

./: .gitignore  README.md  asteroid.py  hello-world.py  play.py  pyproject.toml
game/: asteroid.py  bullet.py  load.py  parameters.py  physicalobject.py  player.py  resources.py  util.py
gimp/: asteroid.xcf  bullet.xcf  engine_flame.xcf  one.xcf  player.xcf
version1/: asteroid.py
version2/: asteroid.py
version2/game/: load.py  parameters.py  physicalobject.py  player.py
